@@ -21,7 +21,7 @@ static const char *DATA_DATABASE_CREATE_CLASSIFIERINSTANCE_TABLE =
         "id INTEGER PRIMARY KEY ASC, "
         "main_type INTEGER, "
         "stereotype TEXT, "
-        "name TEXT, "
+        "name TEXT UNIQUE, "
         "description TEXT, "
         "x_order INTEGER, "
         "y_order INTEGER "
@@ -57,7 +57,7 @@ static const char *DATA_DATABASE_CREATE_FEATUREINSTANCE_TABLE =
         "id INTEGER PRIMARY KEY ASC, "
         "main_type INTEGER, "
         "classifier_id INTEGER, "
-        "key TEXT, "
+        "key TEXT UNIQUE, "
         "value TEXT, "
         "description TEXT, "
         "list_order INTEGER, "
