@@ -199,6 +199,13 @@ void gui_simple_message_to_user_show_message_with_string ( gui_simple_message_to
             }
             break;
 
+            case GUI_SIMPLE_MESSAGE_CONTENT_NAME_NOT_UNIQUE:
+            {
+                utf8stringbuf_append_str( (*this_).content, "Name already in use: " );
+                utf8stringbuf_append_str( (*this_).content, string_param );
+            }
+            break;
+
             default:
             {
                 TSLOG_ERROR("unexptected gui_simple_message_content_t");
