@@ -1,5 +1,6 @@
 2016-xx-xx 0.08 [xxxxxxx]
-  + 
+  + Export of png and svg diagrams
+  - DB format changed: classifier.name is UNIQUE, features.key is UNIQUE
 2016-11-26 0.07 [874f539]
   + The user can move classifiers
 2016-10-06 0.06 [e2b0e01]
